# football

./: .env  .gitignore  Procfile  data.py  euro-2021.json  manage.py  pyproject.toml  python  requirements.txt  worldcup-2018.json
account/: urls.py  views.py
authentication/: mail.py  (+1 more)
backend/: pyproject.toml  requirements.txt
backend/authentication/: authentications.py  tokens.py
backend/authentication/forms/: __init__.py  reset.py
backend/authentication/management/commands/: generate_cypress_fixtures.py
backend/authentication/serializers/: __init__.py  me.py  password.py
backend/authentication/tests/: test_invite_api.py  test_password_api.py  test_register_api.py
backend/authentication/views/: __init__.py  invite.py  login.py  logout.py  me.py  password.py
backend/betting/: exceptions.py  models.py  tasks.py
backend/betting/migrations/: 0002_auto_20180508_2114.py  0004_game_competition.py  0007_group_competition.py  0008_remove_competitor_slug.py  0011_auto_20210522_0044.py  0012_badge.py
backend/betting/views/: __init__.py  auth.py  games.py  users.py
backend/courier/: __init__.py  admin.py
backend/courier/fixtures/: courier.json
backend/courier/migrations/: 0001_initial.py  0002_auto_20200701_2323.py  0004_activity.py  0005_auto_20200725_1824.py  0007_auto_20200909_1712.py  0009_auto_20210302_1812.py  0010_auto_20210315_2127.py
backend/courier/tests/: test_send_email.py
backend/football/: settings.py  urls.py  wsgi.py
backend/scripts/: data.py  pre-commit  reset.sh
backend/seeds/: euro-2021.json
backend/web/: loaders.py  views.py
(+210 files in other folders)
